// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeSwitch should fire click event 1`] = `
.c0 {
  box-sizing: content-box;
}

.c0 > * {
  box-sizing: content-box !important;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 200px;
  height: 100px;
  border-radius: 100px;
  border: 5px solid rgba(205,217,229,0.1);
  background: #2d333b;
  -webkit-transition: all 350ms ease-in;
  transition: all 350ms ease-in;
}

.c3::before {
  -webkit-animation-name: jbTuch;
  animation-name: jbTuch;
  -webkit-animation-duration: 350ms;
  animation-duration: 350ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-transition: all 350ms ease-in;
  transition: all 350ms ease-in;
  content: "";
  width: 82px;
  height: 82px;
  border: 5px solid #eac55f;
  top: 4px;
  left: 4px;
  position: absolute;
  border-radius: 82px;
  background: #daaa3f;
}

.c3::after {
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition: all 250ms ease-in;
  transition: all 250ms ease-in;
  position: absolute;
  content: "";
  left: 143px;
  top: 23px;
  width: 10px;
  height: 10px;
  background: transparent;
  border-radius: 50%;
  opacity: 0;
}

.c4:checked +.c2::before {
  background: #ffffff;
  border-color: rgba(208,214,220,0.5);
  -webkit-animation-name: coksJc;
  animation-name: coksJc;
  -webkit-animation-duration: 350ms;
  animation-duration: 350ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c4:checked +.c2::after {
  -webkit-transition-delay: 350ms;
  transition-delay: 350ms;
  opacity: 1;
  box-shadow: rgba(208,214,220,0.5) -13px 0 0 2px,rgba(208,214,220,0.5) -24px 14px 0 -2px;
}

.c1 {
  display: none;
}

.c1:checked +.c2::before {
  background: #cdd9e5;
  border-color: rgba(55,62,71,0.5);
  -webkit-animation-name: coksJc;
  animation-name: coksJc;
  -webkit-animation-duration: 350ms;
  animation-duration: 350ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c1:checked +.c2::after {
  -webkit-transition-delay: 350ms;
  transition-delay: 350ms;
  opacity: 1;
  box-shadow: rgba(55,62,71,0.5) -13px 0 0 2px,rgba(55,62,71,0.5) -24px 14px 0 -2px;
}

<div
  class="c0"
>
  <input
    aria-label="theme-toggle"
    class="c1"
    id="theme-toggle"
    type="checkbox"
  />
  <label
    class="c2 c3"
    for="theme-toggle"
  />
</div>
`;

exports[`ThemeSwitch should render switch 1`] = `
.c0 {
  box-sizing: content-box;
}

.c0 > * {
  box-sizing: content-box !important;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  width: 200px;
  height: 100px;
  border-radius: 100px;
  border: 5px solid rgba(27,31,36,0.15);
  background: #ffffff;
  -webkit-transition: all 350ms ease-in;
  transition: all 350ms ease-in;
}

.c3::before {
  -webkit-animation-name: jbTuch;
  animation-name: jbTuch;
  -webkit-animation-duration: 350ms;
  animation-duration: 350ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
  -webkit-transition: all 350ms ease-in;
  transition: all 350ms ease-in;
  content: "";
  width: 82px;
  height: 82px;
  border: 5px solid #fae17d;
  top: 4px;
  left: 4px;
  position: absolute;
  border-radius: 82px;
  background: #eac54f;
}

.c3::after {
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition: all 250ms ease-in;
  transition: all 250ms ease-in;
  position: absolute;
  content: "";
  left: 143px;
  top: 23px;
  width: 10px;
  height: 10px;
  background: transparent;
  border-radius: 50%;
  opacity: 0;
}

.c1 {
  display: none;
}

.c1:checked +.c2::before {
  background: #ffffff;
  border-color: rgba(208,214,220,0.5);
  -webkit-animation-name: coksJc;
  animation-name: coksJc;
  -webkit-animation-duration: 350ms;
  animation-duration: 350ms;
  -webkit-animation-fill-mode: forwards;
  animation-fill-mode: forwards;
}

.c1:checked +.c2::after {
  -webkit-transition-delay: 350ms;
  transition-delay: 350ms;
  opacity: 1;
  box-shadow: rgba(208,214,220,0.5) -13px 0 0 2px,rgba(208,214,220,0.5) -24px 14px 0 -2px;
}

<div
  class="c0"
>
  <input
    aria-label="theme-toggle"
    class="c1"
    id="theme-toggle"
    type="checkbox"
  />
  <label
    class="c2 c3"
    for="theme-toggle"
  />
</div>
`;
